# netbox3

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt
demo/api/: api__default_get.py  api__loners.py  api__slace.py  check_all_objects.py
demo/branch/: nb_branch.py
demo/create_bulk/: create_aggr_prefi_addr.py  create_bulk.py  delete_bulk.py
demo/forager/: _forager__temp.py  forager__cache.py  forager__include_nested.py  forager__ipam__sub_prefixes.py  forager__ipam__sub_super_prefix.py  forager__join_bulk.py  forager__join_devices.py
demo/get/: circuits__circuit_terminations.py  circuits__circuit_types.py  circuits__circuits.py  circuits__provider_accounts.py  circuits__provider_networks.py  circuits__providers.py  dcim__cables.py  dcim__console_ports.py  dcim__device_roles.py  dcim__device_types.py  dcim__devices.py  dcim__interfaces.py  dcim__locations.py  dcim__manufacturers.py  dcim__platforms.py  dcim__rack_roles.py  dcim__racks.py  dcim__rear_ports.py  dcim__regions.py  dcim__site_groups.py  dcim__sites.py  extras__content_types.py  extras__custom_fields.py  extras__tags.py  ipam__aggregates.py  ipam__asn_ranges.py  ipam__asns.py  ipam__ip_address.py  ipam__prefixes.py  ipam__rirs.py  ipam__roles.py  ipam__route_targets.py  ipam__vlan_groups.py  ipam__vlans.py  ipam__vrfs.py  tenancy__tenant_groups.py  tenancy__tenants.py  virtualization__cluster_groups.py  virtualization__cluster_types.py  virtualization__clusters.py  (+2 more)
demo/readme/: readme__ip_addresses.py  readme__join_devices.py  readme__threads.py
docs/: NbForager_diagram.rst  conf.py  create_doc.py  demo.rst  examples.rst  index.rst  requirements.txt
docs/api/: CircuitsAC.rst  CoreAC.rst  DcimAC.rst  ExtrasAC.rst  IpamAC.rst  PluginsAC.rst  TenancyAC.rst  UsersAC.rst  VirtualizationAC.rst  WirelessAC.rst  nb_api.rst
docs/branch/: nb_branch.rst  nb_value.rst
docs/foragers/: CircuitsAF.rst  CoreAF.rst  DcimAF.rst  ExtrasAF.rst  IpamAF.rst  TenancyAF.rst  UsersAF.rst  VirtualizationAF.rst  WirelessAF.rst  (+1 more)
examples/: api__slace.py  check_all_objects.py  nb_branch.py  readme__ip_addresses.py  readme__threads.py
netbox3/: __init__.py  exceptions.py  helpers.py  log.py  messages.py  nb_api.py  nb_cache.py  nb_forager.py  nb_tree.py  types_.py  wrappers.py
tests/: objects.py  params__nb_branch.py  test__helpers.py  test__nb_tree.py  test__package.py
(+160 files in other folders)
