[tool.poetry]
name = "netbox3"
version = "0.1.9"
description = """Python package to work with Netbox using REST API.
Help in creating Netbox data as a multidimensional dictionary and
representing data similarly to the WEB UI.
"""
authors = ["Vladimirs Prusakovs <vladimir.prusakovs@gmail.com>"]
readme = "README.rst"
license = "Apache-2.0"
homepage = "https://github.com/vladimirs-git/netbox3"
repository = "https://github.com/vladimirs-git/netbox3"
keywords = ["netbox"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Natural Language :: English",
]
[tool.poetry.dependencies]
python = "^3.8"
ciscoconfparse = "^1.9"
pydantic = "^2"
requests = "^2"
tomli = "2.0.1"
vhelpers = "^0.1"
netports = "^0.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
pygments = "^2.16.1"
pylint = "^3.0.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
readthedocs-sphinx-search = "^0.3.1"
requests-mock = "^1.11.0"
restructuredtext-lint = "^1.4.0"
ruff = "^0.1.6"
sphinx = "7.1.2"
sphinx-rtd-theme = "^1.3.0"
sphinxnotes-strike = "^1.2"
twine = "^4.0.2"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.9"
types-tabulate = "^0.9.0.3"
typing-extensions = "^4.8.0"

[tool.setuptools.package-data]
netbox3 = ["py.typed"]

[tool.poetry.extras]
test = ["pytest"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vladimirs-git/netbox3/issues"
"Download URL" = "https://github.com/vladimirs-git/netbox3/archive/refs/tags/0.1.9.tar.gz"


[tool.mypy]
python_version = "3.8"

[tool.ruff]
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "_notes",
    "dist",
    "examples",
    "temp",
    "tmp",
    "venv",
]
line-length = 100
indent-width = 4
target-version = "py38"
#select = ["E4", "E7", "E9", "F"]
#ignore = []
#fixable = ["ALL"]
#unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false  # arguments on separate lines
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "pep257"  # docstring style

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
